// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TasksController (e2e) /tasks (GET) 1`] = `Array []`;

exports[`TasksController (e2e) /tasks (POST) 1`] = `
Object {
  "active": true,
  "critical": false,
  "done": false,
  "id": 1,
  "title": "Task #1",
}
`;

exports[`TasksController (e2e) /tasks/:id (PUT) 1`] = `
Object {
  "active": true,
  "critical": false,
  "done": true,
  "id": 1,
  "title": "Updated task #2",
}
`;
